--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,3 @@
 [Outlook]
-account_name = bagi.benji@gmail.com
-folder_name = Amazon
+account_name = your_account@example.com
+folder_name = your_folder
